log/build_2024-06-12_23-18-58/cube_localizer/stderr.log
  File "/home/jg/ros_rlr/install/cube_localizer/lib/python3.10/site-packages/cube_localizer/cube_localizer.py", line 6
    from tf2_ros import *tf*transformations
                         ^^
SyntaxError: invalid syntax

